force-app/main/default/objects/ZCAA_Staging_Table__c/ZCAA_Staging_Table__c.object-meta.xml
<CustomObject>
    <description>This is used to stage the data coming from Territory Mapper and then loaded into Zip Code Area Assignment (ZCAA) object</description>
    <label>ZCAA Staging Table</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ZAA Staging Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZCAA Staging Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>