force-app/main/default/objects/ZCAA_Staging_Table__c/fields/Assignment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Effective_Date__c</fullName>
    <description>ZCAA target field for loading the effective date of the assignment</description>
    <inlineHelpText>ZCAA target field for loading the effective date of the assignment</inlineHelpText>
    <label>Assignment Effective Date</label>
    <type>DateTime</type>
</CustomField>