force-app/main/default/objects/ZCAA_Staging_Table__c/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <description>Territory Mapper County Name</description>
    <inlineHelpText>Territory Mapper County Name</inlineHelpText>
    <label>County Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>