force-app/main/default/objects/ZCAA_Staging_Table__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZCAA target field for loading the active flag for the assignment</description>
    <inlineHelpText>ZCAA target field for loading the active flag for the assignment</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>