force-app/main/default/objects/ZCAA_Staging_Table__c/fields/IsIncluded__c.field-meta.xml
<CustomField>
    <fullName>IsIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZCAA target field for loading the included flag for the assignment</description>
    <inlineHelpText>ZCAA target field for loading the included flag for the assignment</inlineHelpText>
    <label>IsIncluded</label>
    <type>Checkbox</type>
</CustomField>