force-app/main/default/objects/ZCAA_Staging_Table__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>ZCAA target field for loading the user id of the person assigned to the area</description>
    <inlineHelpText>ZCAA target field for loading the user id of the person assigned to the area</inlineHelpText>
    <label>OwnerId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>