force-app/main/default/objects/ZCAA_Staging_Table__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>ZCAA target field for loading the role of the person who is assigned to the area</description>
    <inlineHelpText>ZCAA target field for loading the role of the person who is assigned to the area</inlineHelpText>
    <label>Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>