force-app/main/default/objects/ZCAA_Staging_Table__c/fields/Salesforce_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Email__c</fullName>
    <description>The email address for the SFDC user. This is used to get the SFDC user id.</description>
    <inlineHelpText>The email address for the SFDC user. This is used to get the SFDC user id.</inlineHelpText>
    <label>Salesforce User Email</label>
    <type>Email</type>
</CustomField>