force-app/main/default/objects/ZCAA_Staging_Table__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <description>Territory Mapper State Name</description>
    <inlineHelpText>Territory Mapper State Name</inlineHelpText>
    <label>State Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>