force-app/main/default/objects/ZCAA_Staging_Table__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Territory Mapper 5 digit Zip Code</description>
    <inlineHelpText>Territory Mapper 5 digit Zip Code</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>